# four-one-api

./: .dockerignore  .env  .gitignore  Dockerfile  candidates.py  dashboard.py  data.py  docker-compose.yml  filter.py  main.py  nginx.conf  pyproject.toml  scoring.py  test_scoring.py
helpers/: __init__.py  api_client.py  haversineMethod.py  locationSuggestor.py  longlat.py  requirements.txt  scoringMethod.py
helpers/tests_NA/: generateRoutes.py  run_route_example.py
