[project]
name = "forty-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "polars>=1.35.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.16.3",
    "uvicorn>=0.38.0",
    "streamlit>=1.40.0",
    "pydeck>=0.9.0",
    "pandas>=2.0.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
